// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`golden — anomaly (role-based) > Anomaly: Aurora(Caster) vs Rammus 1`] = `
{
  "duration": 19.5,
  "logCounts": {
    "ability": 4,
    "attack": 30,
    "death": 1,
    "move": 6,
  },
  "scenarioName": "Anomaly: Aurora(Caster) vs Rammus",
  "seed": 7,
  "snapshotCount": 586,
  "units": [
    {
      "alive": false,
      "attackCount": 17,
      "castCount": 2,
      "championApi": "TFT17_Aurora",
      "finalHp": 0,
      "id": "player-0",
      "killCount": 0,
      "maxHp": 1260,
      "starLevel": 2,
      "team": "player",
      "totalDamageDealt": 786.9,
      "totalDamageTaken": 1321.44,
    },
    {
      "alive": true,
      "attackCount": 13,
      "castCount": 1,
      "championApi": "TFT17_Rammus",
      "finalHp": 1553.1,
      "id": "enemy-0",
      "killCount": 1,
      "maxHp": 2340,
      "starLevel": 2,
      "team": "enemy",
      "totalDamageDealt": 1321.44,
      "totalDamageTaken": 786.9,
    },
  ],
  "winner": "enemy",
}
`;

exports[`golden — anomaly (role-based) > Anomaly: Briar(Fighter) vs Illaoi 1`] = `
{
  "duration": 11.1,
  "logCounts": {
    "ability": 5,
    "attack": 23,
    "death": 1,
    "move": 6,
  },
  "scenarioName": "Anomaly: Briar(Fighter) vs Illaoi",
  "seed": 7,
  "snapshotCount": 334,
  "units": [
    {
      "alive": true,
      "attackCount": 16,
      "castCount": 4,
      "championApi": "TFT17_Briar",
      "finalHp": 783.11,
      "id": "player-0",
      "killCount": 1,
      "maxHp": 1170,
      "starLevel": 2,
      "team": "player",
      "totalDamageDealt": 2068.74,
      "totalDamageTaken": 573.33,
    },
    {
      "alive": false,
      "attackCount": 7,
      "castCount": 1,
      "championApi": "TFT17_Illaoi",
      "finalHp": 0,
      "id": "enemy-0",
      "killCount": 0,
      "maxHp": 1980,
      "starLevel": 2,
      "team": "enemy",
      "totalDamageDealt": 573.33,
      "totalDamageTaken": 2068.74,
    },
  ],
  "winner": "player",
}
`;

exports[`golden — anomaly (role-based) > Anomaly: Jinx(Marksman) vs Rammus 1`] = `
{
  "duration": 13.3667,
  "logCounts": {
    "ability": 4,
    "attack": 27,
    "death": 1,
    "move": 6,
  },
  "scenarioName": "Anomaly: Jinx(Marksman) vs Rammus",
  "seed": 7,
  "snapshotCount": 402,
  "units": [
    {
      "alive": false,
      "attackCount": 18,
      "castCount": 2,
      "championApi": "TFT17_Jinx",
      "finalHp": 0,
      "id": "player-0",
      "killCount": 0,
      "maxHp": 990,
      "starLevel": 2,
      "team": "player",
      "totalDamageDealt": 1176.12,
      "totalDamageTaken": 1052.5,
    },
    {
      "alive": true,
      "attackCount": 9,
      "castCount": 1,
      "championApi": "TFT17_Rammus",
      "finalHp": 1163.88,
      "id": "enemy-0",
      "killCount": 1,
      "maxHp": 2340,
      "starLevel": 2,
      "team": "enemy",
      "totalDamageDealt": 1052.5,
      "totalDamageTaken": 1176.12,
    },
  ],
  "winner": "enemy",
}
`;

exports[`golden — anomaly (role-based) > Anomaly: Rammus(Tank) vs Jinx 1`] = `
{
  "duration": 16.4667,
  "logCounts": {
    "ability": 1,
    "attack": 23,
    "death": 1,
    "move": 6,
  },
  "scenarioName": "Anomaly: Rammus(Tank) vs Jinx",
  "seed": 7,
  "snapshotCount": 495,
  "units": [
    {
      "alive": true,
      "attackCount": 10,
      "castCount": 0,
      "championApi": "TFT17_Rammus",
      "finalHp": 2536.38,
      "id": "player-0",
      "killCount": 1,
      "maxHp": 3440,
      "starLevel": 2,
      "team": "player",
      "totalDamageDealt": 1044,
      "totalDamageTaken": 903.62,
    },
    {
      "alive": false,
      "attackCount": 13,
      "castCount": 1,
      "championApi": "TFT17_Jinx",
      "finalHp": 0,
      "id": "enemy-0",
      "killCount": 0,
      "maxHp": 990,
      "starLevel": 2,
      "team": "enemy",
      "totalDamageDealt": 903.62,
      "totalDamageTaken": 1044,
    },
  ],
  "winner": "player",
}
`;

exports[`golden — anomaly specialist (star orbit) > Anomaly: Gnar(Specialist) vs Rammus 1`] = `
{
  "duration": 4.5333,
  "logCounts": {
    "ability": 8,
    "attack": 11,
    "death": 1,
    "move": 6,
  },
  "scenarioName": "Anomaly: Gnar(Specialist) vs Rammus",
  "seed": 7,
  "snapshotCount": 137,
  "units": [
    {
      "alive": true,
      "attackCount": 9,
      "castCount": 9,
      "championApi": "TFT17_Gnar",
      "finalHp": 738,
      "id": "player-0",
      "killCount": 1,
      "maxHp": 990,
      "starLevel": 2,
      "team": "player",
      "totalDamageDealt": 2368.13,
      "totalDamageTaken": 252,
    },
    {
      "alive": false,
      "attackCount": 2,
      "castCount": 0,
      "championApi": "TFT17_Rammus",
      "finalHp": 0,
      "id": "enemy-0",
      "killCount": 0,
      "maxHp": 2340,
      "starLevel": 2,
      "team": "enemy",
      "totalDamageDealt": 252,
      "totalDamageTaken": 2368.13,
    },
  ],
  "winner": "player",
}
`;

exports[`golden — basic > 1v1 Briar mirror (대칭) 1`] = `
{
  "duration": 10.1,
  "logCounts": {
    "ability": 6,
    "attack": 25,
    "death": 1,
    "move": 6,
  },
  "scenarioName": "1v1 Briar mirror (대칭)",
  "seed": 42,
  "snapshotCount": 304,
  "units": [
    {
      "alive": true,
      "attackCount": 13,
      "castCount": 3,
      "championApi": "TFT17_Briar",
      "finalHp": 54.44,
      "id": "player-0",
      "killCount": 1,
      "maxHp": 650,
      "starLevel": 1,
      "team": "player",
      "totalDamageDealt": 733.33,
      "totalDamageTaken": 680,
    },
    {
      "alive": false,
      "attackCount": 12,
      "castCount": 3,
      "championApi": "TFT17_Briar",
      "finalHp": 0,
      "id": "enemy-0",
      "killCount": 0,
      "maxHp": 650,
      "starLevel": 1,
      "team": "enemy",
      "totalDamageDealt": 680,
      "totalDamageTaken": 733.33,
    },
  ],
  "winner": "player",
}
`;

exports[`golden — basic > 1v1 Jinx+IE vs Briar (단일 스탯 아이템) 1`] = `
{
  "duration": 9.6333,
  "logCounts": {
    "ability": 3,
    "attack": 19,
    "death": 1,
    "move": 6,
  },
  "scenarioName": "1v1 Jinx+IE vs Briar (단일 스탯 아이템)",
  "seed": 42,
  "snapshotCount": 290,
  "units": [
    {
      "alive": false,
      "attackCount": 8,
      "castCount": 1,
      "championApi": "TFT17_Jinx",
      "finalHp": 0,
      "id": "player-0",
      "killCount": 0,
      "maxHp": 990,
      "starLevel": 2,
      "team": "player",
      "totalDamageDealt": 1138.43,
      "totalDamageTaken": 1033,
    },
    {
      "alive": true,
      "attackCount": 11,
      "castCount": 2,
      "championApi": "TFT17_Briar",
      "finalHp": 155.53,
      "id": "enemy-0",
      "killCount": 1,
      "maxHp": 1170,
      "starLevel": 2,
      "team": "enemy",
      "totalDamageDealt": 1033,
      "totalDamageTaken": 1138.43,
    },
  ],
  "winner": "enemy",
}
`;

exports[`golden — basic > 2v2 Akali+Jinx vs Belveth+Illaoi 1`] = `
{
  "duration": 15.3333,
  "logCounts": {
    "ability": 10,
    "attack": 47,
    "death": 2,
    "move": 16,
    "status_expire": 1,
  },
  "scenarioName": "2v2 Akali+Jinx vs Belveth+Illaoi",
  "seed": 1337,
  "snapshotCount": 461,
  "units": [
    {
      "alive": false,
      "attackCount": 10,
      "castCount": 3,
      "championApi": "TFT17_Akali",
      "finalHp": 0,
      "id": "player-0",
      "killCount": 0,
      "maxHp": 1350,
      "starLevel": 2,
      "team": "player",
      "totalDamageDealt": 889.67,
      "totalDamageTaken": 1445.57,
    },
    {
      "alive": false,
      "attackCount": 12,
      "castCount": 1,
      "championApi": "TFT17_Jinx",
      "finalHp": 0,
      "id": "player-1",
      "killCount": 0,
      "maxHp": 990,
      "starLevel": 2,
      "team": "player",
      "totalDamageDealt": 973.12,
      "totalDamageTaken": 905.7,
    },
    {
      "alive": true,
      "attackCount": 15,
      "castCount": 3,
      "championApi": "TFT17_Belveth",
      "finalHp": 1350,
      "id": "enemy-0",
      "killCount": 2,
      "maxHp": 1350,
      "starLevel": 2,
      "team": "enemy",
      "totalDamageDealt": 1666.96,
      "totalDamageTaken": 86.21,
    },
    {
      "alive": true,
      "attackCount": 10,
      "castCount": 1,
      "championApi": "TFT17_Illaoi",
      "finalHp": 203.42,
      "id": "enemy-1",
      "killCount": 0,
      "maxHp": 1980,
      "starLevel": 2,
      "team": "enemy",
      "totalDamageDealt": 684.31,
      "totalDamageTaken": 1776.58,
    },
  ],
  "winner": "enemy",
}
`;

exports[`golden — combined items > Akali+Bloodthirster vs Illaoi 1`] = `
{
  "duration": 15.4667,
  "logCounts": {
    "ability": 7,
    "attack": 27,
    "death": 1,
    "move": 11,
    "status_expire": 1,
  },
  "scenarioName": "Akali+Bloodthirster vs Illaoi",
  "seed": 7,
  "snapshotCount": 465,
  "units": [
    {
      "alive": true,
      "attackCount": 17,
      "castCount": 5,
      "championApi": "TFT17_Akali",
      "finalHp": 1175.44,
      "id": "player-0",
      "killCount": 1,
      "maxHp": 1350,
      "starLevel": 2,
      "team": "player",
      "totalDamageDealt": 2079.38,
      "totalDamageTaken": 670.34,
    },
    {
      "alive": false,
      "attackCount": 10,
      "castCount": 1,
      "championApi": "TFT17_Illaoi",
      "finalHp": 0,
      "id": "enemy-0",
      "killCount": 0,
      "maxHp": 1980,
      "starLevel": 2,
      "team": "enemy",
      "totalDamageDealt": 670.34,
      "totalDamageTaken": 2079.38,
    },
  ],
  "winner": "player",
}
`;

exports[`golden — combined items > Aurora+Rabadon vs Rammus 1`] = `
{
  "duration": 19.5,
  "logCounts": {
    "ability": 4,
    "attack": 30,
    "death": 1,
    "move": 6,
  },
  "scenarioName": "Aurora+Rabadon vs Rammus",
  "seed": 7,
  "snapshotCount": 586,
  "units": [
    {
      "alive": false,
      "attackCount": 17,
      "castCount": 2,
      "championApi": "TFT17_Aurora",
      "finalHp": 0,
      "id": "player-0",
      "killCount": 0,
      "maxHp": 1260,
      "starLevel": 2,
      "team": "player",
      "totalDamageDealt": 819.37,
      "totalDamageTaken": 1321.44,
    },
    {
      "alive": true,
      "attackCount": 13,
      "castCount": 1,
      "championApi": "TFT17_Rammus",
      "finalHp": 1520.63,
      "id": "enemy-0",
      "killCount": 1,
      "maxHp": 2340,
      "starLevel": 2,
      "team": "enemy",
      "totalDamageDealt": 1321.44,
      "totalDamageTaken": 819.37,
    },
  ],
  "winner": "enemy",
}
`;

exports[`golden — combined items > Belveth+Deathblade vs Briar 1`] = `
{
  "duration": 10.9,
  "logCounts": {
    "ability": 4,
    "attack": 25,
    "death": 1,
    "move": 6,
  },
  "scenarioName": "Belveth+Deathblade vs Briar",
  "seed": 42,
  "snapshotCount": 328,
  "units": [
    {
      "alive": true,
      "attackCount": 10,
      "castCount": 2,
      "championApi": "TFT17_Belveth",
      "finalHp": 243.4,
      "id": "player-0",
      "killCount": 1,
      "maxHp": 1350,
      "starLevel": 2,
      "team": "player",
      "totalDamageDealt": 1447.28,
      "totalDamageTaken": 1267.45,
    },
    {
      "alive": false,
      "attackCount": 15,
      "castCount": 3,
      "championApi": "TFT17_Briar",
      "finalHp": 0,
      "id": "enemy-0",
      "killCount": 0,
      "maxHp": 1170,
      "starLevel": 2,
      "team": "enemy",
      "totalDamageDealt": 1267.45,
      "totalDamageTaken": 1447.28,
    },
  ],
  "winner": "player",
}
`;

exports[`golden — combined items > Briar+Titans vs Jinx 1`] = `
{
  "duration": 4.1667,
  "logCounts": {
    "ability": 2,
    "attack": 12,
    "death": 1,
    "move": 6,
  },
  "scenarioName": "Briar+Titans vs Jinx",
  "seed": 101,
  "snapshotCount": 126,
  "units": [
    {
      "alive": true,
      "attackCount": 9,
      "castCount": 2,
      "championApi": "TFT17_Briar",
      "finalHp": 1075.05,
      "id": "player-0",
      "killCount": 1,
      "maxHp": 1170,
      "starLevel": 2,
      "team": "player",
      "totalDamageDealt": 1018.41,
      "totalDamageTaken": 217.16,
    },
    {
      "alive": false,
      "attackCount": 3,
      "castCount": 0,
      "championApi": "TFT17_Jinx",
      "finalHp": 0,
      "id": "enemy-0",
      "killCount": 0,
      "maxHp": 990,
      "starLevel": 2,
      "team": "enemy",
      "totalDamageDealt": 217.16,
      "totalDamageTaken": 1018.41,
    },
  ],
  "winner": "player",
}
`;

exports[`golden — combined items > Fiora+Quicksilver vs Rammus 1`] = `
{
  "duration": 4.7,
  "logCounts": {
    "ability": 5,
    "attack": 31,
    "death": 1,
    "move": 9,
  },
  "scenarioName": "Fiora+Quicksilver vs Rammus",
  "seed": 7,
  "snapshotCount": 142,
  "units": [
    {
      "alive": true,
      "attackCount": 28,
      "castCount": 3,
      "championApi": "TFT17_Fiora",
      "finalHp": 1995.42,
      "id": "player-0",
      "killCount": 1,
      "maxHp": 2160,
      "starLevel": 2,
      "team": "player",
      "totalDamageDealt": 2411.4,
      "totalDamageTaken": 263.09,
    },
    {
      "alive": false,
      "attackCount": 3,
      "castCount": 1,
      "championApi": "TFT17_Rammus",
      "finalHp": 0,
      "id": "enemy-0",
      "killCount": 0,
      "maxHp": 2340,
      "starLevel": 2,
      "team": "enemy",
      "totalDamageDealt": 263.09,
      "totalDamageTaken": 2411.4,
    },
  ],
  "winner": "player",
}
`;

exports[`golden — combined items > Illaoi+BrambleVest+Archangels vs Akali (혼합 경로) 1`] = `
{
  "duration": 21.6333,
  "logCounts": {
    "ability": 9,
    "attack": 38,
    "death": 1,
    "move": 13,
    "status_expire": 1,
  },
  "scenarioName": "Illaoi+BrambleVest+Archangels vs Akali (혼합 경로)",
  "seed": 5,
  "snapshotCount": 650,
  "units": [
    {
      "alive": false,
      "attackCount": 14,
      "castCount": 1,
      "championApi": "TFT17_Illaoi",
      "finalHp": 0,
      "id": "player-0",
      "killCount": 0,
      "maxHp": 1980,
      "starLevel": 2,
      "team": "player",
      "totalDamageDealt": 968.28,
      "totalDamageTaken": 2014.59,
    },
    {
      "alive": true,
      "attackCount": 24,
      "castCount": 8,
      "championApi": "TFT17_Akali",
      "finalHp": 515.89,
      "id": "enemy-0",
      "killCount": 1,
      "maxHp": 1350,
      "starLevel": 2,
      "team": "enemy",
      "totalDamageDealt": 2014.59,
      "totalDamageTaken": 968.28,
    },
  ],
  "winner": "enemy",
}
`;

exports[`golden — combined items > Jinx+Guinsoos vs Illaoi 1`] = `
{
  "duration": 4.9333,
  "logCounts": {
    "ability": 3,
    "attack": 28,
    "death": 1,
    "move": 6,
  },
  "scenarioName": "Jinx+Guinsoos vs Illaoi",
  "seed": 101,
  "snapshotCount": 149,
  "units": [
    {
      "alive": true,
      "attackCount": 26,
      "castCount": 3,
      "championApi": "TFT17_Jinx",
      "finalHp": 810,
      "id": "player-0",
      "killCount": 1,
      "maxHp": 990,
      "starLevel": 2,
      "team": "player",
      "totalDamageDealt": 2007.2,
      "totalDamageTaken": 180,
    },
    {
      "alive": false,
      "attackCount": 2,
      "castCount": 0,
      "championApi": "TFT17_Illaoi",
      "finalHp": 0,
      "id": "enemy-0",
      "killCount": 0,
      "maxHp": 1980,
      "starLevel": 2,
      "team": "enemy",
      "totalDamageDealt": 180,
      "totalDamageTaken": 2007.2,
    },
  ],
  "winner": "player",
}
`;

exports[`golden — combined items > Jinx+IE+Deathblade vs Illaoi (누적 StatPatch) 1`] = `
{
  "duration": 16.2333,
  "logCounts": {
    "ability": 3,
    "attack": 23,
    "death": 1,
    "move": 6,
    "status_expire": 1,
  },
  "scenarioName": "Jinx+IE+Deathblade vs Illaoi (누적 StatPatch)",
  "seed": 11,
  "snapshotCount": 488,
  "units": [
    {
      "alive": true,
      "attackCount": 13,
      "castCount": 1,
      "championApi": "TFT17_Jinx",
      "finalHp": 110,
      "id": "player-0",
      "killCount": 1,
      "maxHp": 990,
      "starLevel": 2,
      "team": "player",
      "totalDamageDealt": 2014.84,
      "totalDamageTaken": 780,
    },
    {
      "alive": false,
      "attackCount": 10,
      "castCount": 1,
      "championApi": "TFT17_Illaoi",
      "finalHp": 0,
      "id": "enemy-0",
      "killCount": 0,
      "maxHp": 1980,
      "starLevel": 2,
      "team": "enemy",
      "totalDamageDealt": 780,
      "totalDamageTaken": 2014.84,
    },
  ],
  "winner": "player",
}
`;

exports[`golden — psyops (counter + timer) > Aurora+EmpathicImplant vs Rammus (Timer mana) 1`] = `
{
  "duration": 19.5,
  "logCounts": {
    "ability": 4,
    "attack": 30,
    "death": 1,
    "move": 6,
  },
  "scenarioName": "Aurora+EmpathicImplant vs Rammus (Timer mana)",
  "seed": 7,
  "snapshotCount": 586,
  "units": [
    {
      "alive": false,
      "attackCount": 17,
      "castCount": 2,
      "championApi": "TFT17_Aurora",
      "finalHp": 0,
      "id": "player-0",
      "killCount": 0,
      "maxHp": 1260,
      "starLevel": 2,
      "team": "player",
      "totalDamageDealt": 670.5,
      "totalDamageTaken": 1321.44,
    },
    {
      "alive": true,
      "attackCount": 13,
      "castCount": 1,
      "championApi": "TFT17_Rammus",
      "finalHp": 1669.5,
      "id": "enemy-0",
      "killCount": 1,
      "maxHp": 2340,
      "starLevel": 2,
      "team": "enemy",
      "totalDamageDealt": 1321.44,
      "totalDamageTaken": 670.5,
    },
  ],
  "winner": "enemy",
}
`;

exports[`golden — psyops (counter + timer) > Jinx+ChemicalCapacitor vs Rammus (armor shred) 1`] = `
{
  "duration": 5.0667,
  "logCounts": {
    "ability": 3,
    "attack": 31,
    "death": 1,
    "move": 6,
  },
  "scenarioName": "Jinx+ChemicalCapacitor vs Rammus (armor shred)",
  "seed": 7,
  "snapshotCount": 153,
  "units": [
    {
      "alive": true,
      "attackCount": 29,
      "castCount": 3,
      "championApi": "TFT17_Jinx",
      "finalHp": 950.02,
      "id": "player-0",
      "killCount": 1,
      "maxHp": 990,
      "starLevel": 2,
      "team": "player",
      "totalDamageDealt": 2410.99,
      "totalDamageTaken": 216,
    },
    {
      "alive": false,
      "attackCount": 2,
      "castCount": 0,
      "championApi": "TFT17_Rammus",
      "finalHp": 0,
      "id": "enemy-0",
      "killCount": 0,
      "maxHp": 2340,
      "starLevel": 2,
      "team": "enemy",
      "totalDamageDealt": 216,
      "totalDamageTaken": 2410.99,
    },
  ],
  "winner": "player",
}
`;

exports[`golden — psyops (counter + timer) > Jinx+Semiconductor vs Rammus (Counter) 1`] = `
{
  "duration": 19.5,
  "logCounts": {
    "ability": 4,
    "attack": 29,
    "death": 1,
    "move": 6,
  },
  "scenarioName": "Jinx+Semiconductor vs Rammus (Counter)",
  "seed": 7,
  "snapshotCount": 586,
  "units": [
    {
      "alive": false,
      "attackCount": 16,
      "castCount": 2,
      "championApi": "TFT17_Jinx",
      "finalHp": 0,
      "id": "player-0",
      "killCount": 0,
      "maxHp": 1190,
      "starLevel": 2,
      "team": "player",
      "totalDamageDealt": 1300.75,
      "totalDamageTaken": 1268.5,
    },
    {
      "alive": true,
      "attackCount": 13,
      "castCount": 1,
      "championApi": "TFT17_Rammus",
      "finalHp": 1039.25,
      "id": "enemy-0",
      "killCount": 1,
      "maxHp": 2340,
      "starLevel": 2,
      "team": "enemy",
      "totalDamageDealt": 1268.5,
      "totalDamageTaken": 1300.75,
    },
  ],
  "winner": "enemy",
}
`;

exports[`golden — psyops (counter + timer) > Jinx+Semiconductor(Radiant) vs Rammus 1`] = `
{
  "duration": 21.0333,
  "logCounts": {
    "ability": 4,
    "attack": 31,
    "death": 1,
    "move": 6,
  },
  "scenarioName": "Jinx+Semiconductor(Radiant) vs Rammus",
  "seed": 7,
  "snapshotCount": 632,
  "units": [
    {
      "alive": false,
      "attackCount": 17,
      "castCount": 2,
      "championApi": "TFT17_Jinx",
      "finalHp": 0,
      "id": "player-0",
      "killCount": 0,
      "maxHp": 1290,
      "starLevel": 2,
      "team": "player",
      "totalDamageDealt": 1220.31,
      "totalDamageTaken": 1358.5,
    },
    {
      "alive": true,
      "attackCount": 14,
      "castCount": 1,
      "championApi": "TFT17_Rammus",
      "finalHp": 1119.69,
      "id": "enemy-0",
      "killCount": 1,
      "maxHp": 2340,
      "starLevel": 2,
      "team": "enemy",
      "totalDamageDealt": 1358.5,
      "totalDamageTaken": 1220.31,
    },
  ],
  "winner": "enemy",
}
`;

exports[`golden — psyops (counter + timer) > Jinx+Targetlock 2v2 (per-target first hit) 1`] = `
{
  "duration": 7,
  "logCounts": {
    "ability": 11,
    "attack": 73,
    "death": 2,
    "move": 11,
  },
  "scenarioName": "Jinx+Targetlock 2v2 (per-target first hit)",
  "seed": 7,
  "snapshotCount": 211,
  "units": [
    {
      "alive": true,
      "attackCount": 67,
      "castCount": 8,
      "championApi": "TFT17_Jinx",
      "finalHp": 387.5,
      "id": "player-0",
      "killCount": 2,
      "maxHp": 990,
      "starLevel": 2,
      "team": "player",
      "totalDamageDealt": 4355.76,
      "totalDamageTaken": 602.5,
    },
    {
      "alive": false,
      "attackCount": 4,
      "castCount": 1,
      "championApi": "TFT17_Rammus",
      "finalHp": 0,
      "id": "enemy-0",
      "killCount": 0,
      "maxHp": 2340,
      "starLevel": 2,
      "team": "enemy",
      "totalDamageDealt": 422.5,
      "totalDamageTaken": 2355.49,
    },
    {
      "alive": false,
      "attackCount": 2,
      "castCount": 0,
      "championApi": "TFT17_Illaoi",
      "finalHp": 0,
      "id": "enemy-1",
      "killCount": 0,
      "maxHp": 1980,
      "starLevel": 2,
      "team": "enemy",
      "totalDamageDealt": 180,
      "totalDamageTaken": 2000.27,
    },
  ],
  "winner": "player",
}
`;

exports[`golden — psyops (counter + timer) > MasterYi(PsyOps)+ChemicalRadiant 2v2 (cleave) 1`] = `
{
  "duration": 3.8667,
  "logCounts": {
    "ability": 2,
    "attack": 16,
    "death": 2,
    "move": 9,
  },
  "scenarioName": "MasterYi(PsyOps)+ChemicalRadiant 2v2 (cleave)",
  "seed": 7,
  "snapshotCount": 117,
  "units": [
    {
      "alive": true,
      "attackCount": 11,
      "castCount": 2,
      "championApi": "TFT17_MasterYi",
      "finalHp": 1949.86,
      "id": "player-0",
      "killCount": 2,
      "maxHp": 1980,
      "starLevel": 2,
      "team": "player",
      "totalDamageDealt": 1370.95,
      "totalDamageTaken": 229.24,
    },
    {
      "alive": false,
      "attackCount": 3,
      "castCount": 0,
      "championApi": "TFT17_Jinx",
      "finalHp": 0,
      "id": "enemy-0",
      "killCount": 0,
      "maxHp": 550,
      "starLevel": 1,
      "team": "enemy",
      "totalDamageDealt": 108.33,
      "totalDamageTaken": 588.08,
    },
    {
      "alive": false,
      "attackCount": 2,
      "castCount": 0,
      "championApi": "TFT17_Aurora",
      "finalHp": 0,
      "id": "enemy-1",
      "killCount": 0,
      "maxHp": 700,
      "starLevel": 1,
      "team": "enemy",
      "totalDamageDealt": 43.64,
      "totalDamageTaken": 705.6,
    },
  ],
  "winner": "player",
}
`;

exports[`golden — psyops (counter + timer) > Pyke(PsyOps)+TargetlockRadiant 2v2 (on_kill heal) 1`] = `
{
  "duration": 3.3333,
  "logCounts": {
    "ability": 2,
    "attack": 10,
    "death": 2,
    "move": 10,
  },
  "scenarioName": "Pyke(PsyOps)+TargetlockRadiant 2v2 (on_kill heal)",
  "seed": 7,
  "snapshotCount": 101,
  "units": [
    {
      "alive": true,
      "attackCount": 5,
      "castCount": 1,
      "championApi": "TFT17_Pyke",
      "finalHp": 1260,
      "id": "player-0",
      "killCount": 1,
      "maxHp": 1260,
      "starLevel": 2,
      "team": "player",
      "totalDamageDealt": 1442.23,
      "totalDamageTaken": 157.76,
    },
    {
      "alive": false,
      "attackCount": 3,
      "castCount": 0,
      "championApi": "TFT17_Jinx",
      "finalHp": 0,
      "id": "enemy-0",
      "killCount": 0,
      "maxHp": 550,
      "starLevel": 1,
      "team": "enemy",
      "totalDamageDealt": 108.1,
      "totalDamageTaken": 606.56,
    },
    {
      "alive": false,
      "attackCount": 2,
      "castCount": 0,
      "championApi": "TFT17_Aurora",
      "finalHp": 0,
      "id": "enemy-1",
      "killCount": 0,
      "maxHp": 700,
      "starLevel": 1,
      "team": "enemy",
      "totalDamageDealt": 49.66,
      "totalDamageTaken": 835.67,
    },
  ],
  "winner": "player",
}
`;

exports[`golden — psyops (counter + timer) > Rammus+GrenadeMod vs Jinx (Timer heal) 1`] = `
{
  "duration": 16.4667,
  "logCounts": {
    "ability": 2,
    "attack": 23,
    "death": 1,
    "move": 6,
  },
  "scenarioName": "Rammus+GrenadeMod vs Jinx (Timer heal)",
  "seed": 7,
  "snapshotCount": 495,
  "units": [
    {
      "alive": true,
      "attackCount": 10,
      "castCount": 1,
      "championApi": "TFT17_Rammus",
      "finalHp": 1920.3,
      "id": "player-0",
      "killCount": 1,
      "maxHp": 2590,
      "starLevel": 2,
      "team": "player",
      "totalDamageDealt": 1044,
      "totalDamageTaken": 903.62,
    },
    {
      "alive": false,
      "attackCount": 13,
      "castCount": 1,
      "championApi": "TFT17_Jinx",
      "finalHp": 0,
      "id": "enemy-0",
      "killCount": 0,
      "maxHp": 990,
      "starLevel": 2,
      "team": "enemy",
      "totalDamageDealt": 903.62,
      "totalDamageTaken": 1044,
    },
  ],
  "winner": "player",
}
`;

exports[`golden — psyops (counter + timer) > Rammus+Semiconductor vs Jinx (on_hit_taken counter) 1`] = `
{
  "duration": 14.9333,
  "logCounts": {
    "ability": 1,
    "attack": 21,
    "death": 1,
    "move": 6,
  },
  "scenarioName": "Rammus+Semiconductor vs Jinx (on_hit_taken counter)",
  "seed": 7,
  "snapshotCount": 449,
  "units": [
    {
      "alive": true,
      "attackCount": 9,
      "castCount": 0,
      "championApi": "TFT17_Rammus",
      "finalHp": 1723,
      "id": "player-0",
      "killCount": 1,
      "maxHp": 2540,
      "starLevel": 2,
      "team": "player",
      "totalDamageDealt": 1091.25,
      "totalDamageTaken": 817,
    },
    {
      "alive": false,
      "attackCount": 12,
      "castCount": 1,
      "championApi": "TFT17_Jinx",
      "finalHp": 0,
      "id": "enemy-0",
      "killCount": 0,
      "maxHp": 990,
      "starLevel": 2,
      "team": "enemy",
      "totalDamageDealt": 817,
      "totalDamageTaken": 1091.25,
    },
  ],
  "winner": "player",
}
`;

exports[`golden — psyops (counter + timer) > Viktor(PsyOps)+DroneRadiant vs Rammus 1`] = `
{
  "duration": 17.9667,
  "logCounts": {
    "ability": 3,
    "attack": 27,
    "death": 1,
    "move": 6,
    "status_expire": 1,
  },
  "scenarioName": "Viktor(PsyOps)+DroneRadiant vs Rammus",
  "seed": 7,
  "snapshotCount": 540,
  "units": [
    {
      "alive": false,
      "attackCount": 15,
      "castCount": 1,
      "championApi": "TFT17_Viktor",
      "finalHp": 0,
      "id": "player-0",
      "killCount": 0,
      "maxHp": 1170,
      "starLevel": 2,
      "team": "player",
      "totalDamageDealt": 582.19,
      "totalDamageTaken": 1235.04,
    },
    {
      "alive": true,
      "attackCount": 12,
      "castCount": 1,
      "championApi": "TFT17_Rammus",
      "finalHp": 1523.44,
      "id": "enemy-0",
      "killCount": 1,
      "maxHp": 2340,
      "starLevel": 2,
      "team": "enemy",
      "totalDamageDealt": 1235.04,
      "totalDamageTaken": 582.19,
    },
  ],
  "winner": "enemy",
}
`;

exports[`golden — timer (drone uplink) > Aurora+DroneUplink vs Rammus (Timer) 1`] = `
{
  "duration": 19.5,
  "logCounts": {
    "ability": 4,
    "attack": 30,
    "death": 1,
    "move": 6,
  },
  "scenarioName": "Aurora+DroneUplink vs Rammus (Timer)",
  "seed": 7,
  "snapshotCount": 586,
  "units": [
    {
      "alive": false,
      "attackCount": 17,
      "castCount": 2,
      "championApi": "TFT17_Aurora",
      "finalHp": 0,
      "id": "player-0",
      "killCount": 0,
      "maxHp": 1260,
      "starLevel": 2,
      "team": "player",
      "totalDamageDealt": 750.94,
      "totalDamageTaken": 1321.44,
    },
    {
      "alive": true,
      "attackCount": 13,
      "castCount": 1,
      "championApi": "TFT17_Rammus",
      "finalHp": 1589.06,
      "id": "enemy-0",
      "killCount": 1,
      "maxHp": 2340,
      "starLevel": 2,
      "team": "enemy",
      "totalDamageDealt": 1321.44,
      "totalDamageTaken": 750.94,
    },
  ],
  "winner": "enemy",
}
`;

exports[`golden — timer (drone uplink) > Aurora+RadiantDrone vs Rammus 1`] = `
{
  "duration": 19.5,
  "logCounts": {
    "ability": 4,
    "attack": 30,
    "death": 1,
    "move": 6,
  },
  "scenarioName": "Aurora+RadiantDrone vs Rammus",
  "seed": 7,
  "snapshotCount": 586,
  "units": [
    {
      "alive": false,
      "attackCount": 17,
      "castCount": 2,
      "championApi": "TFT17_Aurora",
      "finalHp": 0,
      "id": "player-0",
      "killCount": 0,
      "maxHp": 1260,
      "starLevel": 2,
      "team": "player",
      "totalDamageDealt": 750.94,
      "totalDamageTaken": 1321.44,
    },
    {
      "alive": true,
      "attackCount": 13,
      "castCount": 1,
      "championApi": "TFT17_Rammus",
      "finalHp": 1589.06,
      "id": "enemy-0",
      "killCount": 1,
      "maxHp": 2340,
      "starLevel": 2,
      "team": "enemy",
      "totalDamageDealt": 1321.44,
      "totalDamageTaken": 750.94,
    },
  ],
  "winner": "enemy",
}
`;
